Added note about Fortran

--- a/ws15/ws15.tex
+++ b/ws15/ws15.tex
@@ -239,6 +239,8 @@ Then the main loop begins. The following happens at each iteration. The artifici
 
 The figures below represent the particle positions as well as the smoothed densities at those positions for various times in the simulation. It is clear that there is some error in the simulation code because the densities of the boundary particles immediately change due to boundary effects, even though the simulation is of a medium with step-wise density distribution that extends to positive and negative infinity.
 
+I couldn't get my Fortran compiler to work, so I'm skipping that part.
+
 \begin{figure}[H]
  \centering
  \hspace{0cm} \includegraphics[width=0.75\textwidth]{figs/fig_1.pdf}
